# ansuman-nsfw-detection-server

./: .gitignore  AGENT.md  Dockerfile  Makefile  README.md  alembic.ini  fly.toml  plan.md  pyproject.toml  requirements.txt  run.sh  storj.txt
.github/workflows/: build-check.yml  deploy-baremetal.yml  rollback-production.yml
alembic/: env.py
alembic/versions/: 0001_create_nsfw_tables.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/clients/: __init__.py  clickhouse.py  gpu_openai.py  http.py  kvrocks.py  postgres.py  storj_interface.py
app/config/: __init__.py  logging.py  settings.py
app/core/: __init__.py  constants.py  lifecycle.py  security.py  sentry.py
app/errors/: __init__.py  base.py  codes.py  http.py  video.py
app/legacy/: __init__.py  bigquery_client.py  concurrent_ping.py  localping.py  nsfw_detector_pb2_grpc.py  ping_server.py  server.py
app/middleware/: error_handler.py  request_id.py  signed_request.py
app/models/: enums.py  frame_result.py  storage_action.py  video_job.py  video_metadata.py  video_result.py
app/prompts/: image_generation_moderation_v1.txt  image_prompt_generation_moderation_v1.txt  text_moderation_v1.txt  visual_batch_moderation_v1.txt
app/repositories/: base.py  unit_of_work.py
app/schemas/: __init__.py  auth.py  clickhouse.py  common.py  image.py  legacy.py  model_output.py  moderation.py  storage_action.py  text.py  video.py
app/services/: aggregation_service.py  auth_service.py  authz.py  base.py  (+14 more)
deploy-baremetal/: Dockerfile  README.md  docker-compose.yml  haproxy-nsfw-snippets.cfg  host2backend.map.append
scripts/: create_clickhouse_tables.py  real_video_pipeline_smoke.py  smoke_api_all.py  smoke_image_url.py  smoke_text.py  smoke_video_detect.py  validate_live_integrations.py
tests/: conftest.py
(+65 files in other folders)
