[project]
name = "nsfw-detector"
version = "0.1.0"
description = "Yral NSFW detection REST API and worker"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "clickhouse-connect>=0.8.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "openai>=1.50.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "psycopg[binary]>=3.2.3",
    "redis>=5.1.0",
    "sentry-sdk>=2.14.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "tenacity>=9.0.0",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
legacy = [
    "cachetools==5.3.3",
    "certifi==2024.6.2",
    "charset-normalizer==3.3.2",
    "google-api-core==2.19.1",
    "google-auth==2.31.0",
    "google-cloud-bigquery==3.25.0",
    "google-cloud-core==2.4.1",
    "google-cloud-storage==2.18.2",
    "google-cloud-vision==3.7.4",
    "grpcio==1.65.2",
    "grpcio-reflection==1.65.2",
    "grpcio-status==1.65.2",
    "grpcio-tools==1.65.2",
    "mlxtend==0.23.1",
    "opencv-python==4.10.0.84",
    "pandas==2.2.2",
    "pillow>=10.4.0",
    "protobuf==5.27.2",
    "pyjwt==2.9.0",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "torch==2.4.0",
    "torchvision>=0.19.0",
    "transformers==4.44.2",
    "upstash-vector==0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.8",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["app/legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
